finished the main page for desktop

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -1,11 +1,12 @@
 //main: ../style.less
 .about{
     display: flex;
+    -ms-display: flex;
     justify-content: space-between;
     flex-wrap:wrap;
 }
 .about__item{
-    flex-basis: 50%;
+    width: 50%;
     &:first-child{
         padding-right: 100px;
     }
