--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -18,6 +18,15 @@
            background-color:darken(@color-yellow,5%); 
         }
     }
+    &--white{
+        padding: 22px 40px;
+        margin-left:50px;
+        color:@color-black;
+         &:hover{
+           color:@color-primary;
+        }
+        
+    }
     &--call__an_ES{
         padding: 18px 31px;
     }
