--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -15,6 +15,7 @@
         min-height: 100px;
         padding:25px 0;
         display: flex;
+        -ms-display: flex;
         justify-content: space-between;
         align-items: center;
         flex-wrap:wrap;
@@ -26,10 +27,12 @@
     }
     &__contact{
         display:flex;
+        -ms-display: flex;
         justify-content: space-between;
     }
     &__info{
         display:flex;
+        -ms-display: flex;
         justify-content: center;
         align-items: center;
         
@@ -42,6 +45,7 @@
 
 .top__panel__inner{
     display: flex;
+    -ms-display: flex;
     justify-content: space-between;
     align-items: center;
 }
