--- a/css/blocks/marketing.less
+++ b/css/blocks/marketing.less
@@ -19,6 +19,7 @@
 
 .marketing__content{
     display:flex;
+    -ms-display: flex; 
     justify-content: space-between;
     align-items: flex-end;
     padding:45px 0 90px;
