--- a/css/blocks/section.less
+++ b/css/blocks/section.less
@@ -13,10 +13,16 @@
     &--about{
         padding: 75px 0;
     }
-    &--work{
+    &--works{
         padding-top:90px;
         background-color:#f6f6f6;
         margin-bottom: 95px;
+    }
+    &--comments{
+        padding-bottom: 102px;
+    }
+    &--map{
+        padding-bottom: 71px;
     }
     &__title{
         .font(@color-black,'OpenSans',36px,700,normal,1);
