--- a/css/blocks/services.less
+++ b/css/blocks/services.less
@@ -16,11 +16,12 @@
 }
 .services__content{
     display: flex;
+    -ms-display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 .services__item{
-    flex-basis: 33%;
+    width: 33%;
     flex-grow: 1;
     padding: 30px;
 
@@ -122,6 +123,7 @@
 .price__header, 
 .price__list__item{
     display: flex;
+    -ms-display: flex;
     justify-content:flex-start;
     
 }
