--- a/css/blocks/social.less
+++ b/css/blocks/social.less
@@ -6,11 +6,15 @@
         display: flex;
         justify-content: center;
     }
+  
 }
 .social__link{
     font-size: 20px;
     color:@color-white;
     & + .social__link{
         margin-left: 10px;
+    }
+    &--footer{
+        font-size: 40px;
     }
 }
