--- a/css/style.less
+++ b/css/style.less
@@ -54,4 +54,7 @@ a:-moz-focus-inner{
 @import "blocks/section";
 @import "blocks/marketing";
 @import "blocks/about";
-@import "blocks/work";
+@import "blocks/works";
+@import "blocks/comments";
+@import "blocks/footer";
+@import "blocks/copyright";
