--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -1,6 +1,7 @@
 //main: ../style.less
 .nav{
     display: flex;
+    -ms-display: flex;
     justify-content: flex-start;
     align-items: center;
     width: 100%;
