--- a/css/vars.less
+++ b/css/vars.less
@@ -13,8 +13,10 @@
 @btn-radius:3px;
 @btn-font:15px;
 
-/*Viewport*/
-@mobile-m: ~ "(max-width:375px)";
-@mobile-l: ~ "(max-width:475px)";
+/*Breakpoint*/
+@mobile-s: ~ "(max-width:375px)";
+@mobile-m: ~ "(max-width:475px)";
+@mobile-l: ~ "(max-width:575px)";
 @tablet: ~ "(max-width:768px)";
 @laptop: ~ "(max-width:1024px)";
+@laptop_l: ~ "(max-width:1200px)";
