--- a/css/blocks/copyright.less
+++ b/css/blocks/copyright.less
@@ -7,4 +7,12 @@
     height: 65px;
     background-color: @color-copyright;
     .font(@color-white,'Roboto',18px,700,normal,1);
+    @media @mobile-m{
+        font-size: 16px;
+        
+    }
+    @media @mobile-s{
+        font-size: 14px;
+        
+    }
 }
