--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -20,6 +20,10 @@
         align-items: center;
         flex-wrap:wrap;
         
+        @media @mobile-l{
+            flex-direction: column;
+        }
+        
     }
     &--icon{
         height: 22px;
@@ -29,6 +33,14 @@
         display:flex;
         -ms-display: flex;
         justify-content: space-between;
+        
+        @media @laptop{
+            padding-bottom: 10px;
+            padding-right: 30px;
+        }
+        @media @tablet{
+            flex-direction: column;
+        }
     }
     &__info{
         display:flex;
@@ -38,6 +50,22 @@
         
         &+&{
             margin-left: 30px;
+           @media @tablet{
+            margin-left: 0;
+            }
+           
+        }
+        @media @tablet{
+            margin-left: 0;
+            margin-bottom: 15px;
+            justify-content: flex-start;
+        }
+        
+    }
+    .container:last-child{
+        @media @tablet{
+            max-width:1230px;
+            padding:0 0px;
         }
     }
         
@@ -48,6 +76,11 @@
     -ms-display: flex;
     justify-content: space-between;
     align-items: center;
+    
+        @media @tablet{
+            flex-direction: column;
+        }
+
 }
 
 .header__text{
