--- a/css/blocks/telephone.less
+++ b/css/blocks/telephone.less
@@ -6,6 +6,14 @@
     &--top__panel{
         display: flex;
         align-items: center;
+        
+        @media @tablet{
+            margin-bottom: 10px;
+        }
+        
+        @media @mobile-l{
+            flex-direction: column;
+        }
     }
     &--header{
         color:@color-black;
@@ -16,8 +24,14 @@
 .telephone__item{
     display: flex;
     align-items: center;
+    
     &+.telephone__item{
         margin-left: 24px;
+        
+            @media @mobile-l{
+                margin-left: 0;
+                margin-top: 10px;
+            }
     }
 }
     
