--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -21,6 +21,8 @@
         position: fixed;
         top:0;
         left:0;
+        box-shadow: 0px 2px 10px rgba(0,0,0,0.5);
+        border-radius: 0;
     }
     
         
