--- a/css/slick/slick-theme.css
+++ b/css/slick/slick-theme.css
@@ -96,7 +96,7 @@
 }
 .slick-dots {
   position: absolute;
-  bottom: -25px;
+  bottom: -35px;
   list-style: none;
   display: block;
   text-align: center;
@@ -142,15 +142,15 @@
   width: 20px;
   height: 20px;
   font-family: "slick";
-  font-size: 6px;
+  font-size: 15px;
   line-height: 20px;
   text-align: center;
-  color: black;
+  color: #fe7d14;
   opacity: 0.25;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before {
-  color: black;
-  opacity: 0.75;
+  color: #fe7d14;
+  opacity: 0.95;
 }
