--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -38,7 +38,9 @@
     background-color:@color-primary;
     border-radius:5px;
     
+    
         @media @tablet{
+            
             flex-direction: column;
         }
     
@@ -51,21 +53,43 @@
     -ms-display: flex;
     justify-content: center;
     align-items:center;
-    min-width: 80px;
-    height: 80px;
+    min-width: 86px;
+    height: 86px;
     border-radius:50%;
-    background-color:@color-yellow;
+    z-index: 1;
+     &:hover:after{
+          transform: scale(1.2);
+    }
+    &:after{
+        content: "";
+        display: block;
+        background-color: @color-white;
+        border-radius:50%;
+        position: absolute;
+        opacity: .4;
+        top:0;
+        left:0;
+        height: 86px;
+        width: 86px;
+        transition:transform .2s linear;
+        z-index: -1;
+        
+       
+    }
     
+    background-color:@color-white;
     @media @laptop{
         margin-bottom: 10px;
     }
+    
+    
 }
 .footer__contact__item{
     display: flex;
     -ms-display: flex;
     align-items: center;
     width: 33.333%;
-    padding: 30px 0px 30px 20px ;
+    padding: 30px 20px;
     position: relative;
     
     
@@ -79,14 +103,11 @@
         top:0;
         left:0;
         z-index: 3;
-        
-       
     }
         @media @laptop{
             height: 194px;
             flex-direction: column;
-            padding-left: 10px;
-            padding-right: 10px;
+            padding: 24px 10px;
         }
     
         @media @tablet{
@@ -118,6 +139,13 @@
     .font(@color-white,'Roboto',16px,400,normal,1.43);
     span{
         font-weight: 700;
+    }
+    a{
+        color:inherit;
+        
+        &:hover{
+            text-decoration: underline;
+        }
     }
     @media @laptop{
         padding-left: 0;
@@ -161,6 +189,8 @@
 }
 
 .footer__nav{
+    list-style: none;
+    padding: 0;
     padding-left:26px;
     @media @tablet{
          padding: 0;
@@ -168,7 +198,7 @@
    
 }
 .footer__nav__link{
-    display:block;
+
     
      .font(@color-white,'Roboto',18px,700,normal,1.66);
     transition:color .2s linear;
