--- a/css/blocks/services.less
+++ b/css/blocks/services.less
@@ -6,6 +6,9 @@
     width: 100%;
     height: 100%;
     min-height: 686px;
+    @media @tablet{
+        margin-top: 40px;
+    }
   
 }
 .services__inner{
@@ -13,8 +16,11 @@
     z-index: 100;
     top:-100px;
     left:0;
+    @media @laptop{
+        top:-80px;
+    }
     @media @tablet{
-        top:50px;
+        top:30px;
     }
 }
 .services__content{
