--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -13,6 +13,9 @@
     overflow: hidden;
     position: relative;
     background-color:#1f1f1f;
+     @media @tablet{
+        max-height: 400px;
+    }
     
 }
 .slider__img{
@@ -23,10 +26,21 @@
     min-width: 100vw;
     height: 100%;
     @media @tablet{
-        width: 100vh;
+        width:auto;
     }
   
 }
+
+/*.slider__btn{
+    
+    
+    @media @mobile-l{
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    
+}*/
 .slider__content{
     width: 100%;
     position: absolute;
@@ -39,14 +53,7 @@
         @media @laptop_l{
             top:105px;
         }
-        @media @laptop_l{
-            top:80px;
 
-        }
-        @media @tablet{
-        top:30px;
-        }
-    
 }
 .slider__title{
     .font(@color-white,'Roboto',70px,700,normal,1.48);
