changed the color from yellow to blue

--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -11,13 +11,14 @@
     min-width: 240px;
     max-width: 310px;
     margin-bottom: 10px;
+    text-align: center;
         transition:background .2s linear, color .2s linear;
  
     &--yellow{
         padding: 18px 40px;
-        background-color:@color-yellow;
+        background-color:#08457e;
         &:hover{
-           background-color:darken(@color-yellow,5%); 
+           background-color:#102c54; 
         }
         
     }
