--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -37,11 +37,11 @@
     border-radius: @btn-radius;
     
     &:hover{
-        background-color:@color-yellow;
+        background-color:@color-blue;
         
     }
     &--active{
-        background-color:@color-yellow;
+        background-color:@color-blue;
 
     }
     @media @tablet{
