--- a/css/vars.less
+++ b/css/vars.less
@@ -3,6 +3,7 @@
 /*Colors*/
 @color-primary:#fe7d14;
 @color-yellow:#fed101;
+@color-blue:#08457e;
 @color-black:#1f1f1f;
 @color-white:#ffffff;
 @color-brown:#322c27;
